fix: windows setup, refactor some code